bad/assign_var_array_string.example_compiler_output
ERROR
[1mbad/assign_var_array_string.lat:5:4: [1;31merror: [0;1massigning to `int[]` from incompatible type `string`[m
	x = "";
	  [1;32m^[m
